fix(TDP-3995): deal with overflow for IE11 (#667)
* fix(TDP-3995): deal with overflow for IE11

* fix(TDP-3995): deal with overflow for IE11

--- a/dataprep-webapp/src/app/components/widgets/modal/_modal.scss
+++ b/dataprep-webapp/src/app/components/widgets/modal/_modal.scss
@@ -68,8 +68,8 @@
 		position: absolute;
 		top: 0;
 		right: 0;
-		bottom: 0;
 		left: 0;
+		min-height: 100vh;
 		background: $background-transparent;
 		opacity: 0;
 		text-align: left;
@@ -359,7 +359,7 @@
 			margin: 0;
 			padding: 0;
 			width: auto;
-			overflow: auto;
+			overflow: hidden;
 		}
 
 		&-content {
